--- a/src/css/common.css
+++ b/src/css/common.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -15,4 +15,35 @@ body {
 img {
   display: block;
   max-width: 100%;
+}
+
+.flatpickr-input {
+  margin-left: 285px;
+  width: 28%;
+  height: 40px;
+}
+
+button {
+  height: 40px;
+  width: 28%;
+  margin-left: 10px;
+}
+
+.timer {
+  display: flex;
+  justify-content: center;
+}
+
+.field {
+  margin-left: 40px;
+}
+
+.value {
+  font-size: 60px;
+  font-weight: 500;
+}
+
+.label {
+  font-size: 23px;
+  font-weight: 700;
 }
